--- a/graph-nodejs-express-mi/package.json
+++ b/graph-nodejs-express-mi/package.json
@@ -19,7 +19,8 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "isomorphic-fetch": "^3.0.0"
+    "isomorphic-fetch": "^3.0.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
